# just-engine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build_debug.bat  build_release.bat  clean_prj_files.bat  format_prj_files.bat  generate_prj_files.bat
.github/workflows/: build-custom.yml  build-linux.yml  build-windows.yml  check-clang-format.yml  clang-format-check.yml
Engine/: CMakeLists.txt
Engine/Source/Core/: CoreDefines.h  CoreMain.cpp  CorePch.h
Engine/Source/Core/Log/: Log.h  LogMacros.h  LogManager.cpp  LogManager.h  LogMisc.cpp  LogMisc.h  Logger.cpp  Logger.h  LoggerImpl.cpp  LoggerImpl.h
Engine/Source/Core/Log/Impls/: ConsoleLoggerImpl.cpp  ConsoleLoggerImpl.h  FileLoggerImpl.cpp  FileLoggerImpl.h
Engine/Source/Core/Types/: BaseTypes.h
Engine/Source/Core/Utilities/: StringUtilities.h
Source/Core/: CoreDefines.h  CoreMain.cpp  LogTemp.h
Source/Core/Log/: LogDetails.cpp  LogDetails.h  LogMacros.h  LogManager.cpp  LogManager.h  LogMisc.h  Logger.cpp  Logger.h  LoggerImpl.cpp  LoggerImpl.h
Source/Core/Log/Impls/: ConsoleLoggerImpl.h  FileLoggerImpl.cpp  FileLoggerImpl.h
Source/Core/Types/: NonCopyable.h
Source/Core/Utilities/: StringUtilities.h
Tools/: utils.bat  utils.py
Tools/CMake/: cmake_helpers.cmake
